Fix mod queue spacing on mobile

--- a/_sass/pages/_modcp.scss
+++ b/_sass/pages/_modcp.scss
@@ -133,6 +133,19 @@
     &__header {
         display: flex;
         justify-content: space-between;
+        flex-direction: column;
+
+        @include bp-medium {
+            flex-direction: row;
+        }
+    }
+
+    &__header-section {
+        margin-bottom: 8px;
+
+        @include bp-medium {
+            margin: 0;
+        }
     }
 
     &__subject {
